--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Demo</h3>
-									<p>Email::</p>
+									<p>Email:</p>
 									<img src="images/email.JPG" width="780">
 									<ul>
 										<li>Mails are divided into chunks.</li>
@@ -83,7 +83,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Setup</h3>
-									<p>No specific installation required:</p>
+									<p>No specific installation required.</p>
 								</div>
 							</section>
 
